src/tests/compile_fail/bad_index.gab
let a = []
1 + a[0] = 2
